// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`radio.task.push.integration — CLI contract given: [case1] --help (the positive usage contract) when: [t0] the push skill runs then: prints the usage + options help text 1`] = `
"🦫 let's check the meter...

🎙️ radio.task.push --help
   ├─ usage
   │  ├─ radio.task.push --via gh.issues --into owner/repo --title "..." --description "..."
   │  ├─ radio.task.push --via os.fileops --into @this --exid 123 --status CLAIMED
   │  └─ echo "details" | radio.task.push --via gh.issues --into @this --title "..." --description @stdin
   │
   ├─ held, never lost
   │  ├─ every push is recorded first, into $route/.radio/ (or .behavior/.radio/)
   │  ├─ a shut gate or an upstream fault holds it QUEUED, exit 2
   │  ├─ the next push that gets through delivers the backlog first, oldest first
   │  └─ see what waits: radio.task.held
   │
   └─ options
      ├─ --via         channel: gh.issues or os.fileops (required)
      ├─ --into        target: @this (current repo) or owner/repo (required)
      ├─ --title       task title (required for new tasks)
      ├─ --description task description (required for new tasks; supports @stdin)
      ├─ --exid        external id for updates
      ├─ --status      status: QUEUED, CLAIMED, DELIVERED
      ├─ --idem        idempotency: findsert or upsert
      ├─ --auth        mode: as-robot:via-keyrack(owner) | as-robot:env(VAR) | as-robot:shx(cmd) | as-human
      └─ --help, -h    show this help"
`;

exports[`radio.task.push.integration — CLI contract given: [case2] no --via arg when: [t0] the push skill runs then: fails with a BadRequestError that names the channels 1`] = `"BadRequestError: --via is required; specify a channel: --via gh.issues or --via os.fileops"`;

exports[`radio.task.push.integration — CLI contract given: [case3] permission unset (the safe-default blocked gate, push-specific) when: [t0] the push skill runs against an ungranted repo then: holds the push QUEUED, exit 2, and names the grant command 1`] = `
"🦫 held for the radio
   ├─ task    = blocked task
   ├─ into    = test-owner/test-repo-push-blocked
   ├─ status  = QUEUED (radio.uses:blocked — default)
   ├─ held at = .behavior/.radio/ (no route bound to this branch)
   ├─ backlog = 1 await the radio
   └─ lift it (human): rhx radio.uses allow
      └─ then the next push delivers the backlog first"
`;

exports[`radio.task.push.integration — CLI contract given: [case4] --via os.fileops update with a seeded task (the positive success contract) when: [t0] the push skill runs the real filesystem update then: prints the rendered task detail a human sees 1`] = `
"🦫 onto the pile!

🎙️ updated: updated cli push task
   ├─ exid: push-cli-001
   ├─ status: QUEUED
   ├─ repo: test-owner/test-repo-push-cli
   ├─ pushedBy: tester
   ├─ pushedAt: 2026-01-30
   ├─ via: os.fileops
   └─ recorded: .behavior/.radio/"
`;

exports[`radio.task.push.integration — CLI contract given: [case5] -h (the short-flag alias) when: [t0] the push skill runs then: prints the same usage + options help text 1`] = `
"🦫 let's check the meter...

🎙️ radio.task.push --help
   ├─ usage
   │  ├─ radio.task.push --via gh.issues --into owner/repo --title "..." --description "..."
   │  ├─ radio.task.push --via os.fileops --into @this --exid 123 --status CLAIMED
   │  └─ echo "details" | radio.task.push --via gh.issues --into @this --title "..." --description @stdin
   │
   ├─ held, never lost
   │  ├─ every push is recorded first, into $route/.radio/ (or .behavior/.radio/)
   │  ├─ a shut gate or an upstream fault holds it QUEUED, exit 2
   │  ├─ the next push that gets through delivers the backlog first, oldest first
   │  └─ see what waits: radio.task.held
   │
   └─ options
      ├─ --via         channel: gh.issues or os.fileops (required)
      ├─ --into        target: @this (current repo) or owner/repo (required)
      ├─ --title       task title (required for new tasks)
      ├─ --description task description (required for new tasks; supports @stdin)
      ├─ --exid        external id for updates
      ├─ --status      status: QUEUED, CLAIMED, DELIVERED
      ├─ --idem        idempotency: findsert or upsert
      ├─ --auth        mode: as-robot:via-keyrack(owner) | as-robot:env(VAR) | as-robot:shx(cmd) | as-human
      └─ --help, -h    show this help"
`;

exports[`radio.task.push.integration — CLI contract given: [case6] --auth as-robot:env(MY_TOKEN) with the var unset when: [t0] the push skill runs then: holds the push as upstream:auth, and names the var + fix 1`] = `
"🦫 held for the radio
   ├─ task    = auth failure contract
   ├─ into    = test-owner/example
   ├─ status  = QUEUED (upstream:auth)
   ├─ held at = .behavior/.radio/ (no route bound to this branch)
   ├─ backlog = 1 await the radio
   └─ fix it: ✋ ConstraintError: --auth as-robot:env(MY_TOKEN) specified but MY_TOKEN is not set
      ├─ hint: set MY_TOKEN in the environment
      └─ then the next push delivers the backlog first"
`;

exports[`radio.task.push.integration — CLI contract given: [case7] --auth as-human inside the test environment when: [t0] the push skill runs then: holds the push as upstream:auth, and names the robot alternatives 1`] = `
"🦫 held for the radio
   ├─ task    = auth failure contract
   ├─ into    = test-owner/example
   ├─ status  = QUEUED (upstream:auth)
   ├─ held at = .behavior/.radio/ (no route bound to this branch)
   ├─ backlog = 1 await the radio
   └─ fix it: ✋ ConstraintError: --auth as-human is forbidden in test environment. use --auth as-robot:env(TOKEN_VAR) or --auth as-robot:shx(command) instead.
      └─ then the next push delivers the backlog first"
`;

exports[`radio.task.push.integration — CLI contract given: [case8] --auth as-robot:shx(command) that exits non-zero when: [t0] the push skill runs the real shell command then: holds the push as upstream:auth, and names the shell failure 1`] = `
"🦫 held for the radio
   ├─ task    = auth failure contract
   ├─ into    = test-owner/example
   ├─ status  = QUEUED (upstream:auth)
   ├─ held at = .behavior/.radio/ (no route bound to this branch)
   ├─ backlog = 1 await the radio
   └─ fix it: ✋ ConstraintError: --auth as-robot:shx(...) command failed: exit 1
      ├─ hint: check the command runs and prints a token to stdout
      └─ then the next push delivers the backlog first"
`;

exports[`radio.task.push.integration — CLI contract given: [case9] --auth as-robot:shx(command) that prints no output when: [t0] the push skill runs the real shell command then: holds the push as upstream:auth, and names the empty output 1`] = `
"🦫 held for the radio
   ├─ task    = auth failure contract
   ├─ into    = test-owner/example
   ├─ status  = QUEUED (upstream:auth)
   ├─ held at = .behavior/.radio/ (no route bound to this branch)
   ├─ backlog = 1 await the radio
   └─ fix it: ✋ ConstraintError: --auth as-robot:shx(...) command produced no output. stderr: (empty)
      └─ then the next push delivers the backlog first"
`;

exports[`radio.task.push.integration — CLI contract given: [case10] --auth with an unrecognized mode when: [t0] the push skill runs then: holds the push as upstream:auth, and lists every supported mode 1`] = `
"🦫 held for the radio
   ├─ task    = auth failure contract
   ├─ into    = test-owner/example
   ├─ status  = QUEUED (upstream:auth)
   ├─ held at = .behavior/.radio/ (no route bound to this branch)
   ├─ backlog = 1 await the radio
   └─ fix it: ✋ ConstraintError: unrecognized --auth mode: some-unknown-mode
      ├─ supported modes:
      │  ├─ as-robot:via-keyrack(owner)
      │  │     use token from keyrack (default owner: ehmpath)
      │  ├─ as-robot:shx(command)
      │  │     execute shell command to retrieve token
      │  ├─ as-robot:env(VAR)
      │  │     use token from environment variable
      │  └─ as-human
      │        use gh cli logged-in session (interactive)
      └─ then the next push delivers the backlog first"
`;
